--- a/login/Assistant/Assistant/Assistant.csproj
+++ b/login/Assistant/Assistant/Assistant.csproj
@@ -11,6 +11,10 @@
     <Compile Remove="Migrations\20190814092708_test.Designer.cs" />
     <Compile Remove="Migrations\20190816092805_test.cs" />
     <Compile Remove="Migrations\20190816092805_test.Designer.cs" />
+    <Compile Remove="Migrations\20190816093527_test.cs" />
+    <Compile Remove="Migrations\20190816093527_test.Designer.cs" />
+    <Compile Remove="Migrations\20190902135459_test.cs" />
+    <Compile Remove="Migrations\20190902135459_test.Designer.cs" />
   </ItemGroup>
 
 
