--- a/login/Assistant/Assistant/Assistant.csproj
+++ b/login/Assistant/Assistant/Assistant.csproj
@@ -21,6 +21,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="encog-dotnet-core" Version="3.4.0" />
     <PackageReference Include="Google.Cloud.Storage.V1" Version="2.1.0-beta01" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
