--- a/login/Assistant/Assistant/appsettings.json
+++ b/login/Assistant/Assistant/appsettings.json
@@ -1,4 +1,5 @@
 {
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Assistant-D825C723-2099-4F5F-9150-FB60C6D8EDE5;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
@@ -7,6 +8,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "*"
 
 }
+  //"pwa": {
+  //  "registerWebmanifest": true,
+  //  "routesToPreCache": "/Views/Utility/Main_menu.html",
+  //  "strategy": "cacheFirst"
+  //},
