--- a/login/Assistant/Assistant/appsettings.json
+++ b/login/Assistant/Assistant/appsettings.json
@@ -8,11 +8,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+
 
 }
-  //"pwa": {
-  //  "registerWebmanifest": true,
-  //  "routesToPreCache": "/Views/Utility/Main_menu.html",
-  //  "strategy": "cacheFirst"
-  //},
