--- a/login/Assistant/Assistant/Assistant.csproj
+++ b/login/Assistant/Assistant/Assistant.csproj
@@ -19,6 +19,10 @@
     <Compile Remove="Migrations\20191112131700_db.Designer.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="Views\Home\Offline.cshtml" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="encog-dotnet-core" Version="3.4.0" />
@@ -28,7 +32,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
+    <PackageReference Include="RequireJS" Version="2.3.6" />
     <PackageReference Include="WebEssentials.AspNetCore.PWA" Version="1.0.59" />
   </ItemGroup>
 
