whole NN working

--- a/login/Assistant/Assistant/wwwroot/manifest.json
+++ b/login/Assistant/Assistant/wwwroot/manifest.json
@@ -2,8 +2,8 @@
   "name": "Assistant",
   "short_name": "PA",
   "description": "DP",
-  "start_url": "/Home",
-  "scope": "/",
+  "start_url": "/Home/Main_menu",
+  "scope": "/Home/",
   "display": "standalone",
   "orientation": "any",
   "lang": "Polish",
