--- a/login/Assistant/Assistant/appsettings.json
+++ b/login/Assistant/Assistant/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Assistant-D825C723-2099-4F5F-9150-FB60C6D8EDE5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "mongodb+srv://ThesisUser2:IOWS6A1wiSlD2Wlu@cluster0.od5jh.mongodb.net/PAssistant?retryWrites=true&w=majority"
   },
   "Logging": {
     "LogLevel": {
