--- a/login/Assistant/Assistant/appsettings.json
+++ b/login/Assistant/Assistant/appsettings.json
@@ -1,4 +1,16 @@
 {
+  "MongoDBOption": {
+    "ConnectionString": "mongodb+srv://ThesisUser2:IOWS6A1wiSlD2Wlu@cluster0.od5jh.mongodb.net/PAssistant?retryWrites=true&w=majority",
+    "Database": "PAssistant",
+    "User": {
+      "CollectionName": "Users",
+      "ManageIndicies": true
+    },
+    "Role": {
+      "CollectionName": "Roles",
+      "ManageIndicies": true
+    }
+  },
 
   "ConnectionStrings": {
     "DefaultConnection": "mongodb+srv://ThesisUser2:IOWS6A1wiSlD2Wlu@cluster0.od5jh.mongodb.net/PAssistant?retryWrites=true&w=majority"
@@ -10,3 +22,4 @@
   },
   "AllowedHosts": "*"
 }
+
